--- a/trip-face/operator.html
+++ b/trip-face/operator.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
 		<title>运营数据</title>
@@ -8,6 +9,13 @@
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
 		<script src="js/echarts.js"></script>
+		<script type="text/javascript" src="js/operator.js"></script>
+		<script type="text/javascript">
+			$(function(){
+				
+				
+			});
+		</script>
 	</head>
 
 	<body>
@@ -30,22 +38,678 @@
 				<div id="myTabContent" class="tab-content">
 					<div class="tab-pane fade in active" id="home">
 						<div id="tle">
-							<div>> 当前情况</div>
+							<div>> 运营数据</div>
 							<div id="userName">古北水镇景区<img src="image/toux.png" /></div>
 						</div>
-					</div>					
+					</div>
 				</div>
-				<div id="group_title">
+				<div id="nav">
 					<ul type="none">
-						<li>今日游客画像统计</li>
-						<li>今日景点人数统计</li>
-						<li>距离大接待量剩余（人）</li>
+						<li>
+							<a onclick="hideandshow('1')">今日游客画像统计</a>
+						</li>
+						<li>
+							<a onclick="hideandshow('2')">今日景点人数统计</a>
+						</li>
+						<li>
+							<a>距离最大接待量剩余（人）</a>
+						</li>
 					</ul>
 				</div>
-				<div id="footer">
-					<p><span>版权所有：大唐移动通信设备有限公司</span></p>
-				</div>
+				<table id="con_table_1" width="1663px">
+					<tr>
+						<td>
+							<div id="box1-1" class="box">
+								<script type="text/javascript">
+									var myChart = echarts.init(document.getElementById('box1-1'));
+									var option = {
+										backgroundColor: '#ffffff',
+										title: {
+											text: '本地有课及外来来源省份',
+											x: 'left'
+										},
+										tooltip: {
+											trigger: 'item',
+											formatter: "{a} <br/>{b} : {c} ({d}%)"
+										},
+										legend: {
+											orient: 'vertical',
+											left: 'right',
+											data: ['北京', '山西', '河南', '河北', '上海']
+										},
+										series: [{
+											name: '访问来源',
+											type: 'pie',
+											radius: '75%',
+											center: ['50%', '60%'],
+											data: [{
+													value: 335,
+													name: '北京'
+												},
+												{
+													value: 310,
+													name: '山西'
+												},
+												{
+													value: 234,
+													name: '河南'
+												},
+												{
+													value: 135,
+													name: '河北'
+												},
+												{
+													value: 1548,
+													name: '上海'
+												}
+											],
+											itemStyle: {
+												emphasis: {
+													shadowBlur: 10,
+													shadowOffsetX: 0,
+													shadowColor: 'rgba(0, 0, 0, 0.6)'
+												}
+											}
+										}]
+									};
+									myChart.setOption(option);
+								</script>
+							</div>
+						</td>
+						<td>
+							<div id="box1-2" class="box">
+								<script type="text/javascript">
+									var myChart = echarts.init(document.getElementById('box1-2'));
+									var option = {
+										backgroundColor: '#ffffff',
+										title: {
+											text: '性别',
+											x: 'left'
+										},
+										tooltip: {
+											trigger: 'item',
+											formatter: "{a} <br/>{b} : {c} ({d}%)"
+										},
+										legend: {
+											orient: 'vertical',
+											left: 'right',
+											data: ['男', '女']
+										},
+										series: [{
+											name: '访问来源',
+											type: 'pie',
+											radius: '75%',
+											center: ['50%', '60%'],
+											data: [{
+													value: 335,
+													name: '男'
+												},
+												{
+													value: 310,
+													name: '女'
+												}
+											],
+											itemStyle: {
+												emphasis: {
+													shadowBlur: 10,
+													shadowOffsetX: 0,
+													shadowColor: 'rgba(0, 0, 0, 0.6)'
+												}
+											}
+										}]
+									};
+									myChart.setOption(option);
+								</script>
+							</div>
+						</td>
+						<td>
+							<div id="box1-3" class="box">
+								<script type="text/javascript">
+									var myChart = echarts.init(document.getElementById('box1-3'));
+									var option = {
+										title: {
+											text: '年龄区间',
+											x: 'left'
+										},
+										backgroundColor: '#white',
+										color: ['#3398DB'],
+										tooltip: {
+											trigger: 'axis',
+											axisPointer: { // 坐标轴指示器，坐标轴触发有效
+												type: 'shadow' // 默认为直线，可选为：'line' | 'shadow'
+											}
+										},
+										grid: {
+											left: '3%',
+											right: '4%',
+											bottom: '3%',
+											containLabel: true
+										},
+										xAxis: [{
+											type: 'category',
+											data: ['10', '20', '30', '40', '50', '60', '70','80','90','100'],
+											axisTick: {
+												alignWithLabel: true
+											}
+										}],
+										yAxis: [{										
+											type: 'value'
+										}],
+										series: [{
+											name: '人数',
+											type: 'bar',
+											barWidth: '60%',
+											data: [10, 52, 200, 334, 390, 330, 220]
+										}]
+									};
+									myChart.setOption(option);
+								</script>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div id="box2-1" class="box">
+								<script type="text/javascript">
+									var myChart = echarts.init(document.getElementById('box2-1'));
+									data = [
+										["2000-06-05", 116],
+										["2000-06-06", 129],
+										["2000-06-07", 135],
+										["2000-06-08", 86],
+										["2000-06-09", 73],
+										["2000-06-10", 85],
+										["2000-06-11", 73],
+										["2000-06-12", 68],
+										["2000-06-13", 92],
+										["2000-06-14", 130],
+										["2000-06-15", 245],
+										["2000-06-16", 139],
+										["2000-06-17", 115],
+										["2000-06-18", 111],
+										["2000-06-19", 309],
+										["2000-06-20", 206],
+										["2000-06-21", 137],
+										["2000-06-22", 128],
+										["2000-06-23", 85],
+										["2000-06-24", 94],
+										["2000-06-25", 71],
+										["2000-06-26", 106],
+										["2000-06-27", 84],
+										["2000-06-28", 93],
+										["2000-06-29", 85],
+										["2000-06-30", 73],
+										["2000-07-01", 83],
+										["2000-07-02", 125],
+										["2000-07-03", 107],
+										["2000-07-04", 82],
+										["2000-07-05", 44],
+										["2000-07-06", 72],
+										["2000-07-07", 106],
+										["2000-07-08", 107],
+										["2000-07-09", 66],
+										["2000-07-10", 91],
+										["2000-07-11", 92],
+										["2000-07-12", 113],
+										["2000-07-13", 107],
+										["2000-07-14", 131],
+										["2000-07-15", 111],
+										["2000-07-16", 64],
+										["2000-07-17", 69],
+										["2000-07-18", 88],
+										["2000-07-19", 77],
+										["2000-07-20", 83],
+										["2000-07-21", 111],
+										["2000-07-22", 57],
+										["2000-07-23", 55],
+										["2000-07-24", 60]
+									];
+
+									var dateList = data.map(function(item) {
+										return item[0];
+									});
+									var valueList = data.map(function(item) {
+										return item[1];
+									});
+
+									option = {
+										backgroundColor: '#ffffff',
+										// Make gradient line here
+										visualMap: {
+											show: false,
+											type: 'continuous',
+											seriesIndex: 0,
+											min: 0,
+											max: 400
+										},
+
+										title: [{
+											left: 'center',
+											text: 'Gradient along the y axis'
+										}],
+										tooltip: {
+											trigger: 'axis'
+										},
+										xAxis: {
+											data: dateList
+										},
+										yAxis: {
+											splitLine: {
+												show: false
+											}
+										},
+										grid: [{
+											bottom: '60%'
+										}, {
+											top: '60%'
+										}],
+										series: {
+											type: 'line',
+											showSymbol: false,
+											data: valueList
+										}
+									};
+									myChart.setOption(option);
+								</script>
+							</div>
+						</td>
+						<td>
+							<div id="box2-2" class="box">
+								<script type="text/javascript">
+									var myChart = echarts.init(document.getElementById('box2-2'));
+									var option = {
+										backgroundColor: '#ffffff',
+										tooltip: {
+											trigger: 'axis',
+											axisPointer: { // 坐标轴指示器，坐标轴触发有效
+												type: 'shadow' // 默认为直线，可选为：'line' | 'shadow'
+											}
+										},
+										legend: {
+											data: ['利润', '支出', '收入']
+										},
+										grid: {
+											left: '3%',
+											right: '4%',
+											bottom: '3%',
+											containLabel: true
+										},
+										xAxis: [{
+											type: 'value'
+										}],
+										yAxis: [{
+											type: 'category',
+											axisTick: {
+												show: false
+											},
+											data: ['周一', '周二', '周三', '周四', '周五', '周六', '周日']
+										}],
+										series: [{
+											name: '利润',
+											type: 'bar',
+											label: {
+												normal: {
+													show: true,
+													position: 'inside'
+												}
+											},
+											data: [200, 170, 240, 244, 200, 220, 210]
+										}]
+									};
+									myChart.setOption(option);
+								</script>
+							</div>
+						</td>
+						<td>
+							<div id="box2-3" class="box">
+								<script type="text/javascript">
+									var myChart = echarts.init(document.getElementById('box2-3'));
+									var option = {
+										backgroundColor: '#ffffff',
+										title: {
+											text: 'Customized Pie',
+											left: 'center',
+											top: 20,
+											textStyle: {
+												color: '#ccc'
+											}
+										},
+
+										tooltip: {
+											trigger: 'item',
+											formatter: "{a} <br/>{b} : {c} ({d}%)"
+										},
+
+										visualMap: {
+											show: false,
+											min: 80,
+											max: 600,
+											inRange: {
+												colorLightness: [0, 1]
+											}
+										},
+										series: [{
+											name: '访问来源',
+											type: 'pie',
+											radius: '80%',
+											center: ['50%', '50%'],
+											data: [{
+													value: 335,
+													name: '直接访问'
+												},
+												{
+													value: 310,
+													name: '邮件营销'
+												},
+												{
+													value: 274,
+													name: '联盟广告'
+												},
+												{
+													value: 235,
+													name: '视频广告'
+												},
+												{
+													value: 400,
+													name: '搜索引擎'
+												}
+											].sort(function(a, b) {
+												return a.value - b.value;
+											}),
+											roseType: 'radius',
+											label: {
+												normal: {
+													textStyle: {
+														color: 'rgba(255, 255, 255, 0.3)'
+													}
+												}
+											},
+											labelLine: {
+												normal: {
+													lineStyle: {
+														color: 'rgba(255, 255, 255, 0.3)'
+													},
+													smooth: 0.2,
+													length: 10,
+													length2: 20
+												}
+											},
+											itemStyle: {
+												normal: {
+													color: '#c23531',
+													shadowBlur: 200,
+													shadowColor: 'rgba(0, 0, 0, 0.5)'
+												}
+											},
+
+											animationType: 'scale',
+											animationEasing: 'elasticOut',
+											animationDelay: function(idx) {
+												return Math.random() * 200;
+											}
+										}]
+									};
+									myChart.setOption(option);
+								</script>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div id="box3-1" class="box">
+								<script type="text/javascript">
+									var myChart = echarts.init(document.getElementById('box3-1'));
+									var option = {
+										backgroundColor: '#ffffff',
+										color: ['#3398DB'],
+										tooltip: {
+											trigger: 'axis',
+											axisPointer: { // 坐标轴指示器，坐标轴触发有效
+												type: 'shadow' // 默认为直线，可选为：'line' | 'shadow'
+											}
+										},
+										grid: {
+											left: '3%',
+											right: '4%',
+											bottom: '3%',
+											containLabel: true
+										},
+										xAxis: [{
+											type: 'category',
+											data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+											axisTick: {
+												alignWithLabel: true
+											}
+										}],
+										yAxis: [{
+											type: 'value'
+										}],
+										series: [{
+											name: '直接访问',
+											type: 'bar',
+											barWidth: '60%',
+											data: [10, 52, 200, 334, 390, 330, 220]
+										}]
+									};
+									myChart.setOption(option);
+								</script>
+							</div>
+						</td>
+						<td>
+							<div id="box3-2" class="box">
+								<script type="text/javascript">
+									var myChart = echarts.init(document.getElementById('box3-2'));
+									var option = {
+										backgroundColor: '#ffffff',
+										tooltip: {
+											trigger: 'item',
+											formatter: "{a} <br/>{b}: {c} ({d}%)"
+										},
+										legend: {
+											orient: 'vertical',
+											x: 'left',
+											data: ['直接访问', '邮件营销', '联盟广告', '视频广告', '搜索引擎']
+										},
+										series: [{
+											name: '访问来源',
+											type: 'pie',
+											radius: ['50%', '70%'],
+											avoidLabelOverlap: false,
+											label: {
+												normal: {
+													show: false,
+													position: 'center'
+												},
+												emphasis: {
+													show: true,
+													textStyle: {
+														fontSize: '30',
+														fontWeight: 'bold'
+													}
+												}
+											},
+											labelLine: {
+												normal: {
+													show: false
+												}
+											},
+											data: [{
+													value: 335,
+													name: '直接访问'
+												},
+												{
+													value: 310,
+													name: '邮件营销'
+												},
+												{
+													value: 234,
+													name: '联盟广告'
+												},
+												{
+													value: 135,
+													name: '视频广告'
+												},
+												{
+													value: 1548,
+													name: '搜索引擎'
+												}
+											]
+										}]
+									};
+
+									myChart.setOption(option);
+								</script>
+							</div>
+						</td>
+						<td>
+							<div id="box3-3" class="box">
+								<script type="text/javascript">
+									var myChart = echarts.init(document.getElementById('box3-3'));
+									var option = {
+										backgroundColor: '#ffffff',
+										color: ['#3398DB'],
+										tooltip: {
+											trigger: 'axis',
+											axisPointer: { // 坐标轴指示器，坐标轴触发有效
+												type: 'shadow' // 默认为直线，可选为：'line' | 'shadow'
+											}
+										},
+										grid: {
+											left: '3%',
+											right: '4%',
+											bottom: '3%',
+											containLabel: true
+										},
+										xAxis: [{
+											type: 'category',
+											data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+											axisTick: {
+												alignWithLabel: true
+											}
+										}],
+										yAxis: [{
+											type: 'value'
+										}],
+										series: [{
+											name: '直接访问',
+											type: 'bar',
+											barWidth: '60%',
+											data: [10, 52, 200, 334, 390, 330, 220]
+										}]
+									};
+									myChart.setOption(option);
+								</script>
+							</div>
+						</td>
+					</tr>
+				</table>
+				<table id="con_table_2" width="1663px">
+					<tr>
+						<td>
+							<div id="boxa1-1">
+								<script type="text/javascript">
+									var myChart = echarts.init(document.getElementById('boxa1-1'));
+									var option = {
+										backgroundColor: '#ffffff',
+										title: {
+											text: 'Customized Pie',
+											left: 'center',
+											top: 20,
+											textStyle: {
+												color: '#ccc'
+											}
+										},
+
+										tooltip: {
+											trigger: 'item',
+											formatter: "{a} <br/>{b} : {c} ({d}%)"
+										},
+
+										visualMap: {
+											show: false,
+											min: 80,
+											max: 600,
+											inRange: {
+												colorLightness: [0, 1]
+											}
+										},
+										series: [{
+											name: '访问来源',
+											type: 'pie',
+											radius: '80%',
+											center: ['50%', '50%'],
+											data: [{
+													value: 335,
+													name: '直接访问'
+												},
+												{
+													value: 310,
+													name: '邮件营销'
+												},
+												{
+													value: 274,
+													name: '联盟广告'
+												},
+												{
+													value: 235,
+													name: '视频广告'
+												},
+												{
+													value: 400,
+													name: '搜索引擎'
+												}
+											].sort(function(a, b) {
+												return a.value - b.value;
+											}),
+											roseType: 'radius',
+											label: {
+												normal: {
+													textStyle: {
+														color: 'rgba(255, 255, 255, 0.3)'
+													}
+												}
+											},
+											labelLine: {
+												normal: {
+													lineStyle: {
+														color: 'rgba(255, 255, 255, 0.3)'
+													},
+													smooth: 0.2,
+													length: 10,
+													length2: 20
+												}
+											},
+											itemStyle: {
+												normal: {
+													color: '#c23531',
+													shadowBlur: 200,
+													shadowColor: 'rgba(0, 0, 0, 0.5)'
+												}
+											},
+
+											animationType: 'scale',
+											animationEasing: 'elasticOut',
+											animationDelay: function(idx) {
+												return Math.random() * 200;
+											}
+										}]
+									};
+									myChart.setOption(option);
+								</script>
+							</div>
+						</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
 			</div>
+			<div id="footer">
+				<p><span>版权所有：大唐移动通信设备有限公司</span></p>
+			</div>
+		</div>
 	</body>
 
 </html>
