--- a/trip-face/operator.html
+++ b/trip-face/operator.html
@@ -11,9 +11,8 @@
 		<script src="js/echarts.js"></script>
 		<script type="text/javascript" src="js/operator.js"></script>
 		<script type="text/javascript">
-			$(function(){
-				
-				
+			$(function() {
+
 			});
 		</script>
 	</head>
@@ -187,12 +186,12 @@
 										},
 										xAxis: [{
 											type: 'category',
-											data: ['10', '20', '30', '40', '50', '60', '70','80','90','100'],
+											data: ['10', '20', '30', '40', '50', '60', '70', '80', '90', '100'],
 											axisTick: {
 												alignWithLabel: true
 											}
 										}],
-										yAxis: [{										
+										yAxis: [{
 											type: 'value'
 										}],
 										series: [{
@@ -213,56 +212,17 @@
 								<script type="text/javascript">
 									var myChart = echarts.init(document.getElementById('box2-1'));
 									data = [
-										["2000-06-05", 116],
-										["2000-06-06", 129],
-										["2000-06-07", 135],
-										["2000-06-08", 86],
-										["2000-06-09", 73],
-										["2000-06-10", 85],
-										["2000-06-11", 73],
-										["2000-06-12", 68],
-										["2000-06-13", 92],
-										["2000-06-14", 130],
-										["2000-06-15", 245],
-										["2000-06-16", 139],
-										["2000-06-17", 115],
-										["2000-06-18", 111],
-										["2000-06-19", 309],
-										["2000-06-20", 206],
-										["2000-06-21", 137],
-										["2000-06-22", 128],
-										["2000-06-23", 85],
-										["2000-06-24", 94],
-										["2000-06-25", 71],
-										["2000-06-26", 106],
-										["2000-06-27", 84],
-										["2000-06-28", 93],
-										["2000-06-29", 85],
-										["2000-06-30", 73],
-										["2000-07-01", 83],
-										["2000-07-02", 125],
-										["2000-07-03", 107],
-										["2000-07-04", 82],
-										["2000-07-05", 44],
-										["2000-07-06", 72],
-										["2000-07-07", 106],
-										["2000-07-08", 107],
-										["2000-07-09", 66],
-										["2000-07-10", 91],
-										["2000-07-11", 92],
-										["2000-07-12", 113],
-										["2000-07-13", 107],
-										["2000-07-14", 131],
-										["2000-07-15", 111],
-										["2000-07-16", 64],
-										["2000-07-17", 69],
-										["2000-07-18", 88],
-										["2000-07-19", 77],
-										["2000-07-20", 83],
-										["2000-07-21", 111],
-										["2000-07-22", 57],
-										["2000-07-23", 55],
-										["2000-07-24", 60]
+										["0", 116],
+										["500", 129],
+										["1000", 135],
+										["1500", 86],
+										["2000", 73],
+										["2500", 85],
+										["3000", 73],
+										["3500", 68],
+										["4000", 92],
+										["4500", 130],
+										["5000", 245]
 									];
 
 									var dateList = data.map(function(item) {
@@ -284,8 +244,8 @@
 										},
 
 										title: [{
-											left: 'center',
-											text: 'Gradient along the y axis'
+											left: 'left',
+											text: '日消费区间'
 										}],
 										tooltip: {
 											trigger: 'axis'
@@ -298,11 +258,6 @@
 												show: false
 											}
 										},
-										grid: [{
-											bottom: '60%'
-										}, {
-											top: '60%'
-										}],
 										series: {
 											type: 'line',
 											showSymbol: false,
@@ -325,13 +280,11 @@
 												type: 'shadow' // 默认为直线，可选为：'line' | 'shadow'
 											}
 										},
-										legend: {
-											data: ['利润', '支出', '收入']
-										},
+										title: [{
+											left: 'left',
+											text: '交通方式'
+										}],
 										grid: {
-											left: '3%',
-											right: '4%',
-											bottom: '3%',
 											containLabel: true
 										},
 										xAxis: [{
@@ -342,10 +295,10 @@
 											axisTick: {
 												show: false
 											},
-											data: ['周一', '周二', '周三', '周四', '周五', '周六', '周日']
+											data: ['步行', '观光车', '缆车', '自行车']
 										}],
 										series: [{
-											name: '利润',
+											name: '人数',
 											type: 'bar',
 											label: {
 												normal: {
@@ -353,7 +306,7 @@
 													position: 'inside'
 												}
 											},
-											data: [200, 170, 240, 244, 200, 220, 210]
+											data: [200, 300, 400, 500]
 										}]
 									};
 									myChart.setOption(option);
@@ -367,11 +320,11 @@
 									var option = {
 										backgroundColor: '#ffffff',
 										title: {
-											text: 'Customized Pie',
-											left: 'center',
+											text: '购物类型比例',
+											left: 'left',
 											top: 20,
 											textStyle: {
-												color: '#ccc'
+												color: '#000000'
 											}
 										},
 
@@ -391,27 +344,35 @@
 										series: [{
 											name: '访问来源',
 											type: 'pie',
-											radius: '80%',
+											radius: '75%',
 											center: ['50%', '50%'],
 											data: [{
 													value: 335,
-													name: '直接访问'
+													name: '餐饮'
 												},
 												{
 													value: 310,
-													name: '邮件营销'
+													name: '电影娱乐'
 												},
 												{
 													value: 274,
-													name: '联盟广告'
+													name: '服装'
 												},
 												{
 													value: 235,
-													name: '视频广告'
+													name: '电器'
 												},
 												{
 													value: 400,
-													name: '搜索引擎'
+													name: '化妆品'
+												},
+												{
+													value: 100,
+													name: '饰品'
+												},
+												{
+													value: 50,
+													name: '箱包皮具'
 												}
 											].sort(function(a, b) {
 												return a.value - b.value;
@@ -420,28 +381,20 @@
 											label: {
 												normal: {
 													textStyle: {
-														color: 'rgba(255, 255, 255, 0.3)'
+														color: 'rgba(0, 0, 0, 1)'
 													}
 												}
 											},
 											labelLine: {
 												normal: {
 													lineStyle: {
-														color: 'rgba(255, 255, 255, 0.3)'
+														color: 'rgba(0, 0, 0, 1)'
 													},
 													smooth: 0.2,
 													length: 10,
 													length2: 20
 												}
 											},
-											itemStyle: {
-												normal: {
-													color: '#c23531',
-													shadowBlur: 200,
-													shadowColor: 'rgba(0, 0, 0, 0.5)'
-												}
-											},
-
 											animationType: 'scale',
 											animationEasing: 'elasticOut',
 											animationDelay: function(idx) {
@@ -476,7 +429,7 @@
 										},
 										xAxis: [{
 											type: 'category',
-											data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+											data: ['古北水镇', '司马小烧酒坊', '永顺染坊', '震源镖局', '八旗会馆', '司马台长城'],
 											axisTick: {
 												alignWithLabel: true
 											}
@@ -485,10 +438,10 @@
 											type: 'value'
 										}],
 										series: [{
-											name: '直接访问',
+											name: '访客人数',
 											type: 'bar',
 											barWidth: '60%',
-											data: [10, 52, 200, 334, 390, 330, 220]
+											data: [10, 52, 200, 334, 390, 330]
 										}]
 									};
 									myChart.setOption(option);
@@ -508,10 +461,10 @@
 										legend: {
 											orient: 'vertical',
 											x: 'left',
-											data: ['直接访问', '邮件营销', '联盟广告', '视频广告', '搜索引擎']
+											data: ['观光车', '缆车', '自行车']
 										},
 										series: [{
-											name: '访问来源',
+											name: '比例',
 											type: 'pie',
 											radius: ['50%', '70%'],
 											avoidLabelOverlap: false,
@@ -544,19 +497,10 @@
 												{
 													value: 234,
 													name: '联盟广告'
-												},
-												{
-													value: 135,
-													name: '视频广告'
-												},
-												{
-													value: 1548,
-													name: '搜索引擎'
 												}
 											]
 										}]
 									};
-
 									myChart.setOption(option);
 								</script>
 							</div>
