--- a/trip-face/operator.html
+++ b/trip-face/operator.html
@@ -10,11 +10,6 @@
 		<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
 		<script src="js/echarts.js"></script>
 		<script type="text/javascript" src="js/operator.js"></script>
-		<script type="text/javascript">
-			$(function() {
-
-			});
-		</script>
 	</head>
 
 	<body>
@@ -23,13 +18,13 @@
 				<ul id="myTab" class="nav nav-tabs">
 					<p><img src="image/logo.png" /></p>
 					<li class="active">
-						<a href="#home" data-toggle="tab" onclick="home(this);"><img src="image/kk.png" />当前概况</a>
+						<a href="index.html" ><img src="image/kk.png" />当前概况</a>
 					</li>
-					<li>
-						<a href="#ios" data-toggle="tab" onclick="fo1(this);"><img src="image/yy.png" />运营数据</a>
+					<li  class="active">
+						<a href="#ios" ><img src="image/yy.png" />运营数据</a>
 					</li>
-					<li class="dropdown">
-						<a href="#java" data-toggle="tab" onclick="fo2(this);"><img src="image/ls.png" />历史数据</a>
+					<li class="active">
+						<a href="sumIndex.html" ><img src="image/ls.png" />历史数据</a>
 					</li>
 				</ul>
 			</div>
@@ -37,7 +32,7 @@
 				<div id="myTabContent" class="tab-content">
 					<div class="tab-pane fade in active" id="home">
 						<div id="tle">
-							<div>> 运营数据</div>
+							<div>>   运营数据       >   今日游客画像统计</div>
 							<div id="userName">古北水镇景区<img src="image/toux.png" /></div>
 						</div>
 					</div>
