--- a/trip-face/index.html
+++ b/trip-face/index.html
@@ -17,13 +17,13 @@
 				<ul id="myTab" class="nav nav-tabs">
 					<p><img src="image/logo.png" /></p>
 					<li class="active">
-						<a href="#"><img src="image/kk.png" />当前概况</a>
+						<a href="#"><img src="image/kk.png" />&nbsp;&nbsp;当前概况</a>
 					</li>
 					<li  class="active">
-						<a href="operator.html"><img src="image/yy.png" />运营数据</a>
+						<a href="operator.html"><img src="image/yy.png" />&nbsp;&nbsp;运营数据</a>
 					</li>
 					<li class="active">
-						<a href="sumIndex.html"><img src="image/ls.png" />历史数据</a>
+						<a href="sumIndex.html"><img src="image/ls.png" />&nbsp;&nbsp;历史数据</a>
 					</li>
 				</ul>
 			</div>
@@ -68,9 +68,9 @@
 									<td style="color: #4ab643;">6320</td>
 									<td style="color: #f36008;">9830</td>
 									<td>28</td>
-									<td style="color: #08a2f3;">1966000</td>
-									<td style="color: #4ab643;">8700000</td>
-									<td style="color: #f36008;">10666000</td>
+									<td style="color: #08a2f3;">196,6000</td>
+									<td style="color: #4ab643;">870,0000</td>
+									<td style="color: #f36008;">1066,6000</td>
 								</tr>
 								<tr>
 									<td>2018/01/02 15:30</td>
@@ -78,9 +78,9 @@
 									<td>6800</td>
 									<td>9642</td>
 									<td>32</td>
-									<td>1928400</td>
-									<td>7862500</td>
-									<td>9790900</td>
+									<td>192,8400</td>
+									<td>786,2500</td>
+									<td>979,0900</td>
 								</tr>
 							</table>
 						</div>
@@ -194,28 +194,28 @@
 											}
 										},
 										data: [{
-												value: 180,
-												name: '司马小\n烧酒\n坊18%'
+												value: 200,
+												name: '司马小烧\n酒坊'
 											},
 											{
 												value: 130,
-												name: '永顺\n染坊13%'
+												name: '永顺染坊'
 											},
 											{
 												value: 180,
-												name: '震远\n镖局18%'
+												name: '震远镖局'
 											},
 											{
 												value: 140,
-												name: '八旗\n会馆\n14%'
+												name: '八旗\n会馆'
 											},
 											{
 												value: 150,
-												name: '司马台\n长城\n15%'
+												name: '司马台长城'
 											},
 											{
-												value: 220,
-												name: '古北\n水镇22%'
+												value: 200,
+												name: '古北水镇'
 											}
 
 										]
