--- a/trip-face/operator_2.html
+++ b/trip-face/operator_2.html
@@ -46,7 +46,7 @@
 							<a href="operator_1.html">今日景点人数统计</a>
 						</li>
 						<li>
-							<a style="color: #08A2F3; font-weight: bold;" href="operator_2.html">距离最大接待量剩余（人）</a>
+							<a style="color: #08A2F3; font-weight: bold;" href="operator_2.html">今日各景点人数统计列表</a>
 						</li>
 					</ul>
 				</div>
@@ -66,7 +66,8 @@
 										},
 										title: [{
 											left: 'left',
-											text: '交通方式'
+											text: '交通方式',
+											top: 5
 										}],
 										grid: {
 											containLabel: true
@@ -153,6 +154,7 @@
 								</script>
 							</div>
 						</td>
+						<td></td>
 					</tr>
 				</table>
 			</div>
