--- a/trip-face/operator.html
+++ b/trip-face/operator.html
@@ -46,7 +46,7 @@
 							<a href="operator_1.html">今日景点人数统计</a>
 						</li>
 						<li>
-							<a href="operator_2.html">距离最大接待量剩余（人）</a>
+							<a href="operator_2.html">今日各景点人数统计列表</a>
 						</li>
 					</ul>
 				</div>
@@ -59,8 +59,9 @@
 									var option = {
 										backgroundColor: '#ffffff',
 										title: {
-											text: '本地有课及外来来源省份',
-											x: 'left'
+											text: '本地游客及外来来源省份',
+											x: 'left',
+											top:5
 										},
 										tooltip: {
 											trigger: 'item',
@@ -69,7 +70,7 @@
 										legend: {
 											orient: 'vertical',
 											left: 'right',
-											data: ['北京', '山西', '河南', '河北', '上海']
+											data: ['北京', '山西', '河南', '河北', '上海','本地'],
 										},
 										series: [{
 											name: '访问来源',
@@ -95,6 +96,10 @@
 												{
 													value: 1548,
 													name: '上海'
+												},
+												{
+													value: 1548,
+													name: '本地'
 												}
 											],
 											itemStyle: {
@@ -118,7 +123,8 @@
 										backgroundColor: '#ffffff',
 										title: {
 											text: '性别',
-											x: 'left'
+											x: 'left',
+											top:5
 										},
 										tooltip: {
 											trigger: 'item',
@@ -163,7 +169,8 @@
 									var option = {
 										title: {
 											text: '年龄区间',
-											x: 'left'
+											x: 'left',
+											top:5
 										},
 										backgroundColor: '#white',
 										color: ['#3398DB'],
@@ -240,7 +247,8 @@
 
 										title: [{
 											left: 'left',
-											text: '日消费区间'
+											text: '日消费区间',
+											top:5
 										}],
 										tooltip: {
 											trigger: 'axis'
@@ -277,7 +285,8 @@
 										},
 										title: [{
 											left: 'left',
-											text: '交通方式'
+											text: '交通方式',
+											top:5
 										}],
 										grid: {
 											containLabel: true
@@ -351,7 +360,7 @@
 										title: {
 											text: '购物类型比例',
 											left: 'left',
-											top: 20,
+											top: 5,
 											textStyle: {
 												color: '#000000'
 											}
@@ -443,7 +452,8 @@
 									var option = {
 										title: {
 											text: '各景点累计人数比例',
-											x: 'left'
+											x: 'left',
+											top: 5
 										},
 										tooltip: {
 											trigger: 'axis',
@@ -528,7 +538,7 @@
 										title: {
 											text: '各景点附近消费占比',
 											left: 'left',
-											top: 20,
+											top: 5,
 											textStyle: {
 												color: '#000000'
 											}
@@ -592,7 +602,8 @@
 									var option = {
 										title: {
 											text: '游玩时长比例',
-											x: 'left'
+											x: 'left',
+											top:5
 										},
 										tooltip: {
 											trigger: 'axis',
@@ -669,6 +680,7 @@
 								</script>
 							</div>
 						</td>
+						<td></td>
 					</tr>
 				</table>
 			</div>
