--- a/trip-face/operator_1.html
+++ b/trip-face/operator_1.html
@@ -46,7 +46,7 @@
 							<a style="color: #08A2F3; font-weight: bold;" href="operator_1.html">今日景点人数统计</a>
 						</li>
 						<li>
-							<a href="operator_2.html">距离最大接待量剩余（人）</a>
+							<a href="operator_2.html">今日各景点人数统计列表</a>
 						</li>
 					</ul>
 				</div>
@@ -99,14 +99,14 @@
 											label: {
 												normal: {
 													textStyle: {
-														color: 'rgba(255, 255, 255, 0.3)'
+														color: 'rgba(0, 0, 0, 1)'
 													}
 												}
 											},
 											labelLine: {
 												normal: {
 													lineStyle: {
-														color: 'rgba(255, 255, 255, 0.3)'
+														color: 'rgba(0, 0, 0, 1)'
 													},
 													smooth: 0.2,
 													length: 10,
@@ -117,13 +117,13 @@
 												normal: {
 													color: '#c23531'
 												}
-											},
-
-											animationType: 'scale',
-											animationEasing: 'elasticOut',
-											animationDelay: function(idx) {
-												return Math.random() * 200;
 											}
+
+//											animationType: 'scale',
+//											animationEasing: 'elasticOut',
+//											animationDelay: function(idx) {
+//												return Math.random() * 200;
+//											}
 										}]
 									};
 									myChart.setOption(option);
@@ -179,7 +179,7 @@
 												normal: {
 													show: true,
 													position: 'bottom',
-													formatter: '{c}% \n{b}',
+													formatter: '{c} \n{b}',
 													textStyle: {
 														color: '#666'
 													}
@@ -210,65 +210,98 @@
 								<script type="text/javascript">
 									var myChart = echarts.init(document.getElementById('box2-1'));
 									var option = {
-										title: {
-											text: '各商圈人数',
-											left: 'left',
-											top: 5
-										},
-										backgroundColor: '#fffff',
+										backgroundColor: '#ffffff',
 										tooltip: {
 											trigger: 'axis',
-											axisPointer: {
-												type: 'none'
-											},
-											formatter: function(params) {
-												return params[0].name + ': ' + params[0].value;
+											axisPointer: { // 坐标轴指示器，坐标轴触发有效
+												type: 'shadow' // 默认为直线，可选为：'line' | 'shadow'
 											}
 										},
-										xAxis: {
-											data: ['古北水镇\n丰悦民俗', '司马台鑫\n苑居农家院', '望山阁农\n家院', '古北水镇\n恒源民俗', '古北水镇\n冯素云农家院', '司马台郝\n彬农家院', ],
+										title: [{
+											left: 'left',
+											text: '各商圈人数',
+											top:5
+										}],
+										grid: {
+											containLabel: true
+										},
+										xAxis: [{
+											type: 'value'
+										}],
+										yAxis: [{
+											type: 'category',
 											axisTick: {
 												show: false
 											},
-											axisLine: {
-												show: false
-											},
-											axisLabel: {
-												textStyle: {
-													color: '#e54035'
-												}
-											}
-										},
-										yAxis: {},
-										color: ['#FF8C00'],
+											data: ['古北水镇\n丰悦民俗', '司马台鑫\n苑居农家院', '望山阁农\n家院', '古北水镇\n恒源民俗', '古北水镇\n冯素云农家院', '司马台郝\n彬农家院', ],
+										}],
 										series: [{
-											name: 'hill',
-											type: 'pictorialBar',
-											barCategoryGap: '-20%',
-											symbol: 'path://M0,10 L10,10 C5.5,10 5.5,5 5,0 C4.5,5 4.5,10 0,10 z',
-											itemStyle: {
+											name: '人数',
+											type: 'bar',
+											label: {
 												normal: {
-													opacity: 0.5
-												},
-												emphasis: {
-													opacity: 1
+													show: true,
+													position: 'inside'
 												}
 											},
-											data: [4000, 5000, 5800, 4800, 4500, 3800],
-											z: 10
-										}, {
-											name: 'glyph',
-											type: 'pictorialBar',
-											barGap: '-120%',
-											symbolPosition: 'end',
-											symbolSize: 50,
-											symbolOffset: [0, '-120%'],
+											data: [{
+														value: 4000,
+														itemStyle: {
+															normal: {
+																color: '#33FFFF'
+
+															}
+														}
+													},
+													{
+														value: 5000,
+														itemStyle: {
+															normal: {
+																color: '#35ecba'
+
+															}
+														}
+													},{
+														value: 5800,
+														itemStyle: {
+															normal: {
+																color: '#f97b37'
+
+															}
+														}
+													},
+													{
+														value: 4800,
+														itemStyle: {
+															normal: {
+																color: '#d53131'
+
+															}
+														}
+													},{
+														value: 3800,
+														itemStyle: {
+															normal: {
+																color: '#a6a34b'
+
+															}
+														}
+													},{
+														value: 4800,
+														itemStyle: {
+															normal: {
+																color: '#84abab'
+
+															}
+														}
+													}]
 										}]
 									};
 									myChart.setOption(option);
 								</script>
 							</div>
 						</td>
+						<td></td>
 					</tr>
 				</table>
 			</div>
