--- a/trip-face/sumIndex_2.html
+++ b/trip-face/sumIndex_2.html
@@ -129,9 +129,9 @@
   </tr>
   <tr>
   	    <td>28</td>
-    <td style="color: #08a2f3;">1966000</td>
-    <td style="color: #4ab643;">8700000</td>
-    <td style="color: #f36008;">10666000</td>
+    <td style="color: #08a2f3;">196,6000</td>
+    <td style="color: #4ab643;">870,0000</td>
+    <td style="color: #f36008;">1066,6000</td>
   </tr>
 </table>
 </div>
@@ -254,12 +254,12 @@
                 }
             },
             data:[
-                {value:180, name:'司马小\n烧酒\n坊18%'},
-                {value:130, name:'永顺\n染坊13%'},
-                {value:180, name:'震远\n镖局18%'},
-                {value:140, name:'八旗\n会馆\n14%'},
-                {value:150, name:'司马台\n长城\n15%'},
-                 {value:220, name:'古北\n水镇22%'}
+                {value:200, name:'司马小烧\n酒坊'},
+                {value:130, name:'永顺染坊'},
+                {value:180, name:'震远镖局'},
+                {value:140, name:'八旗\n会馆'},
+                {value:150, name:'司马台长城'},
+                 {value:200, name:'古北水镇'}
                  
             ]
         },
@@ -320,7 +320,7 @@
 							<a href="sumIndex_1.html">今日景点人数统计</a>
 						</li>
 						<li>
-							<a style="color: #08A2F3; font-weight: bold;" href="operator_2.html">距离最大接待量剩余（人）</a>
+							<a style="color: #08A2F3; font-weight: bold;" href="sumIndex_2.html">今日各景点人数统计列表</a>
 						</li>
 					</ul>
 				</div>
@@ -340,7 +340,8 @@
 										},
 										title: [{
 											left: 'left',
-											text: '交通方式'
+											text: '交通方式',
+											top: 5
 										}],
 										grid: {
 											containLabel: true
@@ -427,6 +428,7 @@
 								</script>
 							</div>
 						</td>
+						<td></td>
 					</tr>
 				</table>
 </div>
